--- a/src/components/Rockets/rockets.css
+++ b/src/components/Rockets/rockets.css
@@ -15,6 +15,10 @@
   gap: 2rem;
 }
 
+.rocket-list-item p {
+  border: 0;
+}
+
 .rocket-img-div > img {
   width: 15rem;
   transition: transform 0.2s;
@@ -35,4 +39,36 @@
 
 .reserve-btn:hover {
   background-color: rgb(0 74 255);
+}
+
+.error {
+  display: flex;
+  justify-content: center;
+  color: brown;
+  font-weight: bolder;
+  font-size: 2rem;
+}
+
+.loading {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.loading span {
+  height: 5rem;
+  background-image: url('../../images/loading-1.svg');
+  background-repeat: no-repeat;
+  width: 5rem;
+  animation: rotate 1s linear 0.5s infinite;
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
 }
